--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Registration and Login System</title>
@@ -12,20 +10,20 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" th:fragment="header">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/}">Registration and Login System</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </nav>
-<br />
-<br />
-<br />
+
+<br /><br /><br />
+
 <div class="container">
     <div class="row col-md-8 offset-md-2">
         <div class="card">
             <div th:if="${param.success}">
-                <div class="alert alert-info">You've successfully registered
-                    to our app!</div>
+                <div class="alert alert-info">You've successfully registered to our app!</div>
             </div>
             <div class="card-header">
                 <h2 class="text-center">Registration</h2>
@@ -35,63 +33,49 @@
 
                     <div class="form-group mb-3">
                         <label class="form-label">First Name</label>
-                        <input class="form-control"
-                               id="firstName"
-                               name="firstName"
-                               placeholder="Enter first name"
-                               th:field="*{firstName}"
-                               type="text"
-                        />
-                        <p th:errors="*{firstName}" class="text-danger"
-                           th:if="${#fields.hasErrors('firstName')}">
-                        </p>
+                        <input class="form-control" id="firstName" name="firstName"
+                               placeholder="Enter first name" th:field="*{firstName}" type="text"/>
+                        <p th:errors="*{firstName}" class="text-danger" th:if="${#fields.hasErrors('firstName')}"></p>
                     </div>
 
                     <div class="form-group mb-3">
                         <label class="form-label">Last Name</label>
-                        <input class="form-control"
-                               id="lastName"
-                               name="lastName"
-                               placeholder="Enter last name"
-                               th:field="*{lastName}"
-                               type="text"
-                        />
-                        <p th:errors="*{lastName}" class="text-danger"
-                           th:if="${#fields.hasErrors('lastName')}">
-                        </p>
+                        <input class="form-control" id="lastName" name="lastName"
+                               placeholder="Enter last name" th:field="*{lastName}" type="text"/>
+                        <p th:errors="*{lastName}" class="text-danger" th:if="${#fields.hasErrors('lastName')}"></p>
                     </div>
+
                     <div class="form-group mb-3">
                         <label class="form-label">Email</label>
-                        <input class="form-control"
-                               id="email"
-                               name="email"
-                               placeholder="Enter email address"
-                               th:field="*{email}"
-                               type="email"
-                        />
-                        <p th:errors="*{email}" class="text-danger"
-                           th:if="${#fields.hasErrors('email')}">
-                        </p>
+                        <input class="form-control" id="email" name="email"
+                               placeholder="Enter email address" th:field="*{email}" type="email"/>
+                        <p th:errors="*{email}" class="text-danger" th:if="${#fields.hasErrors('email')}"></p>
                     </div>
+
                     <div class="form-group mb-3">
                         <label class="form-label">Password</label>
-                        <input class="form-control"
-                               id="password"
-                               name="password"
-                               placeholder="Enter password"
-                               th:field="*{password}"
-                               type="password"
-                        />
-                        <p th:errors="*{password}" class="text-danger"
-                           th:if="${#fields.hasErrors('password')}">
-                        </p>
+                        <input class="form-control" id="password" name="password"
+                               placeholder="Enter password" th:field="*{password}" type="password"/>
+                        <p th:errors="*{password}" class="text-danger" th:if="${#fields.hasErrors('password')}"></p>
+                    </div>
+
+                    <!-- 🚀 Nuevo campo: Selector de Rol -->
+                    <div class="form-group mb-3">
+                        <label class="form-label">Role</label>
+                        <select class="form-control" id="role" name="role" th:field="*{role}">
+                            <option value="" disabled selected>Select a role</option>
+                            <option value="ADMIN">Admin</option>
+                            <option value="OPERADOR">Operador</option>
+                            <option value="SUPERVISOR">Supervisor</option>
+                        </select>
+                        <p th:errors="*{role}" class="text-danger" th:if="${#fields.hasErrors('role')}"></p>
                     </div>
 
                     <div class="form-group mb-3">
                         <button class="btn btn-primary" type="submit">Register</button>
-                        <span>Already registered? <a href="/" th:href="@{/login}">Login
-                             here</a></span>
+                        <span>Already registered? <a th:href="@{/login}">Login here</a></span>
                     </div>
+
                 </form>
             </div>
         </div>
